:octocat: Luciano Fullstack

--- a/index.html
+++ b/index.html
@@ -3,34 +3,33 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport"    content="width=device-width, initial-scale=1.0">
-  <meta name="robots"      content="index, follow">	
-  <meta name="description" content="This Repo reflects my adventures in JavaScript React Node.js Next.js."/>
+  <meta name="robots"      content="index, follow">
+  <meta name="description" content="Luciano Fullstack Resume">
   <link href="favicon.ico"            rel="icon"         type="image/x-icon">
-  <link href="assets/Mona-Sans.woff2" rel="font preload" type="font/woff2" as="font" crossorigin>
+  <link href="assets/Mona-Sans.woff2" rel="font preload" type="font/woff2" crossorigin>
   <link href="assets/style.css"       rel="stylesheet"   type="text/css">
   <link href="assets/animate.min.css" rel="stylesheet"   type="text/css">
   <script src="assets/script.js" async></script>
   <title>Luciano Pereira | Full Stack Dev</title>
 </head>
-<body><a id="top" name="top"></a>
+<body id="top">
 <label class="toggle-control">
-  <input title='dark' type="checkbox" checked="checked" id="dark">
+  <input title="dark" type="checkbox" checked id="dark">
   <span class="control"></span>
 </label>
 <div class="container">
-  <a id='contact' href="#" class="eml josh-js" data-josh-anim-name="flip" data-encoded="b3d5c6dfdfc0c7d2d0d8d7d6c5d6dfdcc3d6c1f3d7c6d0d89dd0dcde">
-     <img id="image" src="assets/lucianopereira.webp"><span>Hire Me</span>
+  <a id="contact" href="#" class="eml josh-js" data-josh-anim-name="flip" data-encoded="59352c3a303837363f2c35352a2d383a32193d2c3a32773a3634">
+     <img id="image" src="assets/lucianopereira.webp" alt="Luciano Picture"><span>Hire Me</span>
   </a>
   <h1 class="josh-js" data-josh-anim-name="fadeInUp">Luciano Pereira</h1>
   <h1 class="josh-js" data-josh-anim-name="fadeInUp">Full Stack Developer</h1>
   <h2>Development and design of web applications with a passion for learning new stacks</h2>
-  <!--<h2>Development and design of web applications for startups and large companies</h2>-->
 </div>
 <div class="skills container">
   <div class="row">
     <div class="wide_column">
-      <h3>Skills</h3>           
-      <h4><span>&#x1f468;&zwj;&#x1f4bb;</span>Object programming & frameworks</h4>
+      <h3>Skills</h3>
+      <h4><span>&#x1f468;&zwj;&#x1f4bb;</span>Object programming &amp; frameworks</h4>
       <h5>Typescript, Node, React, Redux, Next, and Tailwind.</h5>
       <h4><span>&#8987;</span>Agile</h4>
       <h5>Scrum, Kanban, collaborative dev, and test-first.</h5>
@@ -55,9 +54,9 @@
             <h4>Projects</h4>
             <h5>Adapt and create solutions for customers' needs.</h5>
         </div>
-    </div>
+      </div>
       <div class="card">
-        <h3><span></span>50<span>%</span></h3>
+        <h3><span></span>75<span>%</span></h3>
         <div class="card-content">
             <h4>Web</h4>
             <h5>Programming and ensuring the quality of delivery</h5>
@@ -66,14 +65,14 @@
     </div>
     <div class="column">
       <div class="card">
-        <h3><span></span>30<span>%</span></h3>
+        <h3><span></span>10<span>%</span></h3>
         <div class="card-content">
-            <h4>Backlog</h4>
+            <h4>Scrum</h4>
             <h5>Streamline workflows, and meet deadlines</h5>
         </div>
       </div>
       <div class="card">
-        <h3><span></span>20<span>%</span></h3>
+        <h3><span></span>15<span>%</span></h3>
         <div class="card-content">
             <h4>Integrating</h4>
             <h5>Working with third-party APIs</h5>
@@ -82,24 +81,25 @@
     </div>
   </div>
 </div>
-
-<h2 class="timeline-title josh-js" data-josh-anim-name="fadeInUp">Experience</h2><div class="timeline"><ul class="timelineUl">
-
-<li><div class="content">
-<h3>Teacher Assistant<br><span>Henry</span></h3><p>
-Guide students in the first steps of the course.
-Assist in solving exercises and promote group collaboration.<br>
-<strong>Achievements</strong>: Guide students in their first steps in Advanced Java Script, Data Structures, Algorithms, Advanced DOM, CSS, React, Redux, Node JS, and SQL.	
-	
-</p></div><div class="time">
+<h2 class="timeline-title josh-js" data-josh-anim-name="fadeInUp">Experience</h2>
+<div class="timeline">
+  <ul class="timelineUl">
+    <li><div class="content">
+    <h3>Teacher Assistant<br><span>Henry</span></h3>
+    <p>Guide students in the first steps of the course.
+       Assist in solving exercises and promote group collaboration.
+       <br>
+       <strong>Achievements</strong>: Guide students in their first steps in Advanced Java Script, Data Structures, Algorithms, Advanced DOM, CSS, React, Redux, Node JS, and SQL.
+    </p>
+  </div><div class="time">
 <h4>Nov 22 - Jan 23</h4></div></li>
 
 <li><div class="content">
-<h3>Full Stack Developer<br><span>Mobillers</span></h3><p>
-Sales Representative. Advice customer on how to effectively and efficiently manage/strategize business transformation for enhanced ROI & Sustainability. Create SPA, responsible for both back-end and front-end development, this position required a combination of programming skills (namely PHP, HTML5, CSS3, JavaScript, Node.js, TypeScript, React, and Next.Js).  WordPress Developer, including creating WordPress themes and plugins.	
+<h3>Full Stack Developer<br><span>Mobillers</span></h3>
+<p>Sales Representative. Advice customer on how to effectively and efficiently manage/strategize business transformation for enhanced ROI &amp; Sustainability. Create SPA, responsible for both back-end and front-end development, this position required a combination of programming skills (namely PHP, HTML5, CSS3, JavaScript, Node.js, TypeScript, React, and Next.Js).  WordPress Developer, including creating WordPress themes and plugins.
 <strong>Achievements</strong>: Work closely with teams, product owners, agile coaches, and other stakeholders to develop and evangelize best engineering practices across the company and deliver world-class tools and capabilities for our developers. </p></div><div class="time">
-<h4>Nov 22 - Mar 22</h4></div></li>
-	
+<h4>Mar 18 - Mar 22</h4></div></li>
+
 <li><div class="content">
 <h3>Mediator &amp; Lawyer<br><span>Mediaciones.ar</span></h3><p>
 We developed a web application for making professional dispute resolution quicker. We reached more than 13,000 settlement agreements and court proceedings.
@@ -109,76 +109,75 @@ contract negotiations, counseling, employees’ orientation services, and execut
 <h4>Mar 05 - Dec 17</h4></div></li>
 
 <li><div class="content">
-<h3>Employee Trainer<br><span>Workplace Options</span></span></h3><p>
-Employee Programs for Cigna, The Coca Cola Company, Avaya, Bristol Meyers and others. Focus Group Moderator. A focus group is a carefully planned discussion whose objective is to learn about the perceptions, feelings, attitudes, and ideas of the group participating in the conversation concerning a defined area of interest.	
-<strong>Achievements</strong>: Being part of a multi-disciplinary group, I have been able to design, implement and execute a training program for hundreds of employees on effective interpersonal communication, and negotiation.	
+<h3>Employee Trainer<br><span>Workplace Options</span></h3><p>
+Employee Programs for Cigna, The Coca Cola Company, Avaya, Bristol Meyers and others. Focus Group Moderator. A focus group is a carefully planned discussion whose objective is to learn about the perceptions, feelings, attitudes, and ideas of the group participating in the conversation concerning a defined area of interest.
+<strong>Achievements</strong>: Being part of a multi-disciplinary group, I have been able to design, implement and execute a training program for hundreds of employees on effective interpersonal communication, and negotiation.
 </p></div><div class="time">
 <h4>2017 fixed term</h4></div></li>
-	
+
 <li><div class="content">
-<h3>Developer / Professor<br><span>U.B.A.</span></span></h3><p>
-Web developer and statistical assistant in data processing. I also was a professor of legal ethics and law & economics for two years.
-<strong>Achievements</strong>: Perl-CGI to PHP migration. Digital OPAC Library Implementation. Replace SPSS with FOSS solutions like R and Python. 
+<h3>Developer / Professor<br><span>U.B.A.</span></h3><p>
+Web developer and statistical assistant in data processing. I also was a professor of legal ethics and law &amp; economics for two years.
+<strong>Achievements</strong>: Perl-CGI to PHP migration. Digital OPAC Library Implementation. Replace SPSS with FOSS solutions like R and Python.
 </p></div><div class="time">
 <h4>Dec 06 - Nov 16</h4></div></li>
 
 <li><div class="content">
-<h3>E&P / Co-Founder. Media &amp; Entertainment Lawyer<br><span>365 Caril&oacute;</span></span></h3><p>
-Lead as editor and publisher of a luxury lifestyle printed and digital publication targeting the affluent sector of the 
-Cariló area in Buenos Aires. The magazine reached over 100,000 households. Our recognition in leisure industry publications led to profitable marketing relationships with Citibank, HSBC, Mercedes Benz, BMW, Audi, Ford, Jeep Chrysler, Toyota, and Peugeot. The modern media industry is a complex area where the arts and technologies are evolving. 
+<h3>E&amp;P / Co-Founder. Media &amp; Entertainment Lawyer<br><span>365 Caril&oacute;</span></h3><p>
+Lead as editor and publisher of a luxury lifestyle printed and digital publication targeting the affluent sector of the Cariló area in Buenos Aires. The magazine reached over 100,000 households. Our recognition in leisure industry publications led to profitable marketing relationships with Citibank, HSBC, Mercedes Benz, BMW, Audi, Ford, Jeep Chrysler, Toyota, and Peugeot. The modern media industry is a complex area where the arts and technologies are evolving.
 ▪ Attend hearings before the Labor Board regarding employee hiring and termination procedures.
 ▪ Assist in organizing and summarizing sensitive financial and production documents.
 ▪ Exam television episodes and draft clearance notes
-<strong>Achievements</strong>: Full fashion production. Desktop publishing, web (LAMP), and social media design. Automate workflows using Adobe 
-InDesign actions, AppleScript, and LaTeX. Marketing, advertising, and branding. My passion for technology allowed me to meet several developers and be responsible for full life cycle recruiting.
+<strong>Achievements</strong>: Full fashion production. Desktop publishing, web (LAMP), and social media design. Automate workflows using Adobe InDesign actions, AppleScript, and LaTeX. Marketing, advertising, and branding. My passion for technology allowed me to meet several developers and be responsible for full life cycle recruiting.
 </p></div><div class="time">
 <h4>Nov 07 - Feb 12</h4></div></li>
 
 <li><div class="content">
-<h3>Product Owner<br><span>Consejo de la Magistratura CABA</span></h3><p>
-Research, and development of an case management system and legal library index. 
+<h3>Product Owner<br><span>Consejo de la Magistratura CABA</span></h3>
+<p>
+Research, and development of an case management system and legal library index.
 PHP developer since WordPress v2 'Duke'. Software usability and testing for people with disabilities. Recruiting.
-First contact with Agile and Linux administration. EZ-Publish to WordPress Migration.	
-<strong>Achievements</strong>: Product Owner of Jus CABA the first FOSS comprehensive document management solution designed for courts. 
+First contact with Agile and Linux administration. EZ-Publish to WordPress Migration.<strong>Achievements</strong>: Product Owner of Jus CABA the first FOSS comprehensive document management solution designed for courts.
 </p></div><div class="time">
 <h4>Sep 05 - Mar 08</h4></div></li>
 
-<div style="clear:both;"></div></ul><hr></div>
+</ul><div class="clear"></div>
+<hr></div>
 
 <h2 class="timeline-title josh-js" data-josh-anim-name="fadeInUp">Education</h2><div class="timeline"><ul class="timelineUl">
-	
+
 <li><div class="content">
 <h3>Henry <span>Full Stack Developer</span></h3></div><div class="time">
 <h4>Jan 2023</h4></div></li>
-	
+
 <li><div class="content">
 <h3><span>JD/MA (Economics)</span> U.B.A.</h3></div><div class="time">
 <h4>Dec 2014</h4></div></li>
-	
+
 <li><div class="content">
 <h3>CPACF <span>Family Mediator</span></h3></div><div class="time">
 <h4>Dec 2011</h4></div></li>
-	
+
 <li><div class="content">
 <h3><span>Mediator</span> CPACF</h3></div><div class="time">
 <h4>Dec 2009</h4></div></li>
-	
+
 <li><div class="content">
 <h3>U.B.A. <span>DipEd</span></h3></div><div class="time">
-<h4>May 2009</h4></div></li>	
-	
+<h4>May 2009</h4></div></li>
+
 <li><div class="content">
 <h3><span>Teleworking Studies</span> UNESCO</h3></div><div class="time">
 <h4>May 2005</h4></div></li>
-	
+
 <li><div class="content">
 <h3>U.B.A. <span>Lawyer</span></h3></div><div class="time">
-<h4>May 2004</h4></div></li>	
-	
+<h4>May 2004</h4></div></li>
+
 <li><div class="content">
 <h3><span>FCE</span> Univesity of Cambridge</h3></div><div class="time">
 <h4>Dec 1999</h4></div></li>
-	
+
 <li><div class="content">
 <h3><span>GESE</span> Trinity College Dublin</h3></div><div class="time">
 <h4>Oct 1998</h4></div></li>
@@ -186,10 +185,7 @@ First contact with Agile and Linux administration. EZ-Publish to WordPress Migra
 <li><div class="content">
 <h3>San Roque <span>HSD in Computing</span></h3></div><div class="time">
 <h4>Dec 1997</h4></div></li>
-	
-	
-<div style="clear:both;"></div></ul><hr></div>
-	
+</ul><div class="clear"></div><hr></div>
 <a href="#top" aria-label="go up" alt="go up" id="goup" class="hidden"><svg aria-hidden="true"><use xlink:href="#ico-top"></use></svg></a>
 <footer>
 	<span>Coded with &#128153; </span>
