:octocat: Luciano Fullstack

--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport"     content="width=device-width, initial-scale=1.0">
-    <meta name="robots"       content="index, follow">	
-    <meta name="description"  content="This Repo reflects my adventures in JavaScript."/>
-    <link href="favicon.ico"  rel="icon" type="image/x-icon">
+    <meta name="robots"       content="index, follow">
+    <meta name="description"  content="This Repo reflects my adventures in JavaScript.">
+    <link href="https://lucianofullstack.pages.dev/favicon.ico"  rel="icon" type="image/x-icon">
     <title>404 Page Not Found</title>
     <style>
     html,body {      height: 100vh;
@@ -106,8 +106,8 @@
     <div>
         <h1>404</h1>
         <h2>Ooops&mldr; You weren't supposed to see this &#128584;</h2>
-        <img src="assets/monito.gif" width="500px" height="163px" alt="dancing ape">
-        <div><a href="https://thisismysourcecode.github.io/lucianopereira">go home</a></div>      
+        <img src="https://lucianofullstack.pages.dev/assets/monito.gif" width="500px" height="163px" alt="dancing ape">
+        <div><a href="https://lucianofullstack.pages.dev">go home</a></div>
     </div>
 </body>
 </html>
