:octocat: Luciano Fullstack

--- a/assets/encoder.html
+++ b/assets/encoder.html
@@ -108,7 +108,7 @@
         </p>
         <p>
             <label  for="key">Key</label>
-            <input name="key" id="key" type="number" title="key" autofocus min="0" max="256" value="156">
+            <input name="key" id="key" type="number" title="key" min="0" max="256" value="156">
             <button type="submit" id="button" disabled>Copy</button>
         </p>
     </form>
