:octocat: fix typo

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Web developer and statistical assistant in data processing. I also was a profess
 
 <li><div class="content">
 <h3>E&amp;P / Co-Founder. Media &amp; Entertainment Lawyer<br><span>365 Caril&oacute;</span></h3><p>
-Lead as editor and publisher of a luxury lifestyle printed and digital publication targeting the affluent sector of the Cariló area in Buenos Aires. The magazine reached over 100,000 households. Our recognition in leisure industry publications led to profitable marketing relationships with Citibank, HSBC, Mercedes Benz, BMW, Audi, Ford, Jeep Chrysler, Toyota, and Peugeot. The modern media industry is a complex area where the arts and technologies are evolving.
+Lead as editor and publisher of a luxury lifestyle printed and digital publication targeting the affluent sector of the Cariló area in Buenos Aires. The magazine reached over 100,000 households. Our recognition in leisure industry publications led to profitable marketing relationships with Citibank, HSBC, Mercedes Benz, BMW, Audi, Ford, Jeep Chrysler, Toyota, and Peugeot. The modern media industry is a complex area where the arts and technologies are evolving.
 ▪ Attend hearings before the Labor Board regarding employee hiring and termination procedures.
 ▪ Assist in organizing and summarizing sensitive financial and production documents.
 ▪ Exam television episodes and draft clearance notes
