--- a/index.html
+++ b/index.html
@@ -85,62 +85,33 @@
 <div class="timeline">
   <ul class="timelineUl">
     <li><div class="content">
-    <h3>Teacher Assistant<br><span>Henry</span></h3>
-    <p>Guide students in the first steps of the course.
-       Assist in solving exercises and promote group collaboration.
-       <br>
-       <strong>Achievements</strong>: Guide students in their first steps in Advanced Java Script, Data Structures, Algorithms, Advanced DOM, CSS, React, Redux, Node JS, and SQL.
-    </p>
+    <h3>Professor<br><span>Rolling Code</span></h3>
+    <p>Advanced java script, algorithms, data structures, DOM, CSS, react, redux, node, and SQL are just a few of the technologies and tools I produced a series of classes to help students get started with modern web creation.</p>
   </div><div class="time">
-<h4>Nov 22 - Jan 23</h4></div></li>
+<h4>Dec 22 - Current</h4></div></li>
 
 <li><div class="content">
 <h3>Full Stack Developer<br><span>Mobillers</span></h3>
-<p>Sales Representative. Advice customer on how to effectively and efficiently manage/strategize business transformation for enhanced ROI &amp; Sustainability. Create SPA, responsible for both back-end and front-end development, this position required a combination of programming skills (namely PHP, HTML5, CSS3, JavaScript, Node.js, TypeScript, React, and Next.Js).  WordPress Developer, including creating WordPress themes and plugins.
-<strong>Achievements</strong>: Work closely with teams, product owners, agile coaches, and other stakeholders to develop and evangelize best engineering practices across the company and deliver world-class tools and capabilities for our developers. </p></div><div class="time">
-<h4>Mar 18 - Mar 22</h4></div></li>
+<p>SAAS applications using JavaScript, React, Node, and PHP. In accordance with agile development principles, I oversaw the design, development, testing, debugging, maintenance, and docs of UI components and services.</p></div><div class="time">
+<h4>Feb 18 - Dec 22</h4></div></li>
 
 <li><div class="content">
-<h3>Mediator &amp; Lawyer<br><span>Mediaciones.ar</span></h3><p>
-We developed a web application for making professional dispute resolution quicker. We reached more than 13,000 settlement agreements and court proceedings.
-contract negotiations, counseling, employees’ orientation services, and execution level of HR policies according to corporate values.
-<strong>Achievements</strong>: Performance evaluation system implementation. Achieved a significant hire cost reduction by introducing requalifying e-learning training programs for current employees.
-	</p></div><div class="time">
-<h4>Mar 05 - Dec 17</h4></div></li>
-
-<li><div class="content">
-<h3>Employee Trainer<br><span>Workplace Options</span></h3><p>
-Employee Programs for Cigna, The Coca Cola Company, Avaya, Bristol Meyers and others. Focus Group Moderator. A focus group is a carefully planned discussion whose objective is to learn about the perceptions, feelings, attitudes, and ideas of the group participating in the conversation concerning a defined area of interest.
-<strong>Achievements</strong>: Being part of a multi-disciplinary group, I have been able to design, implement and execute a training program for hundreds of employees on effective interpersonal communication, and negotiation.
+<h3>Instructor &amp; Focus Group Moderator<br><span>Workplace Options</span></h3><p>
+Agile coaches, product owners, and teams from various firms participated in my focus groups to create and share best engineering practices.
 </p></div><div class="time">
 <h4>2017 fixed term</h4></div></li>
 
 <li><div class="content">
-<h3>Developer / Professor<br><span>U.B.A.</span></h3><p>
-Web developer and statistical assistant in data processing. I also was a professor of legal ethics and law &amp; economics for two years.
-<strong>Achievements</strong>: Perl-CGI to PHP migration. Digital OPAC Library Implementation. Replace SPSS with FOSS solutions like R and Python.
+<h3>Chief Design Officer<br><span>365 Caril&oacute;</span></h3><p>
+Full fashion production. Desktop publishing, web (LAMP), and social media design. Automate workflows using Adobe InDesign actions, AppleScript, and LaTeX. Marketing, advertising, and branding.
 </p></div><div class="time">
-<h4>Dec 06 - Nov 16</h4></div></li>
-
-<li><div class="content">
-<h3>E&amp;P / Co-Founder. Media &amp; Entertainment Lawyer<br><span>365 Caril&oacute;</span></h3><p>
-Lead as editor and publisher of a luxury lifestyle printed and digital publication targeting the affluent sector of the Cariló area in Buenos Aires. The magazine reached over 100,000 households. Our recognition in leisure industry publications led to profitable marketing relationships with Citibank, HSBC, Mercedes Benz, BMW, Audi, Ford, Jeep Chrysler, Toyota, and Peugeot. The modern media industry is a complex area where the arts and technologies are evolving.
-▪ Attend hearings before the Labor Board regarding employee hiring and termination procedures.
-▪ Assist in organizing and summarizing sensitive financial and production documents.
-▪ Exam television episodes and draft clearance notes
-<strong>Achievements</strong>: Full fashion production. Desktop publishing, web (LAMP), and social media design. Automate workflows using Adobe InDesign actions, AppleScript, and LaTeX. Marketing, advertising, and branding. My passion for technology allowed me to meet several developers and be responsible for full life cycle recruiting.
-</p></div><div class="time">
-<h4>Nov 07 - Feb 12</h4></div></li>
+<h4>Mar 09 - Dec 16</h4></div></li>
 
 <li><div class="content">
 <h3>Product Owner<br><span>Consejo de la Magistratura CABA</span></h3>
 <p>
-Research, and development of an case management system and legal library index.
-PHP developer since WordPress v2 'Duke'. Software usability and testing for people with disabilities. Recruiting.
-First contact with Agile and Linux administration. EZ-Publish to WordPress Migration.<strong>Achievements</strong>: Product Owner of Jus CABA the first FOSS comprehensive document management solution designed for courts.
-</p></div><div class="time">
-<h4>Sep 05 - Mar 08</h4></div></li>
-
+Creation of a paperless case management system and library for Courts.  Hiring tasks.</p></div><div class="time">
+<h4>Sep 05 - Dec 08</h4></div></li>
 </ul><div class="clear"></div>
 <hr></div>
 
