--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </a>
   <h1 class="josh-js" data-josh-anim-name="fadeInUp">Luciano Pereira</h1>
   <h1 class="josh-js" data-josh-anim-name="fadeInUp">Full Stack Developer</h1>
-  <h2>Development and design of web applications with a passion for learning new stacks</h2>
+  <h2>I am a resourceful web developer with scrum experience and a passion for creating attractive designs and clean code.</h2>
 </div>
 <div class="skills container">
   <div class="row">
