:octocat: Upgrade: CSS Animation Support

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport"    content="width=device-width, initial-scale=1.0">
   <meta name="robots"      content="index, follow">
   <meta name="description" content="Luciano Fullstack Resume">
-  <link href="favicon.ico"            rel="icon"         type="image/x-icon">
-  <link href="assets/Mona-Sans.woff2" rel="font preload" type="font/woff2" crossorigin>
-  <link href="assets/style.css"       rel="stylesheet"   type="text/css">
-  <link href="assets/animate.min.css" rel="stylesheet"   type="text/css">
+  <link href="favicon.ico"            rel="icon"       type="image/x-icon">
+  <link href="assets/Mona-Sans.woff2" rel="preload"    type="font/woff2" as="font" crossorigin>
+  <link href="assets/style.css"       rel="stylesheet" type="text/css">
+  <link href="assets/animate.min.css" rel="stylesheet" type="text/css">
   <script src="assets/script.js" async></script>
   <title>Luciano Pereira | Full Stack Dev</title>
 </head>
