:octocat: Upgrade: Heart

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="robots"      content="index, follow">
   <meta name="description" content="Luciano Fullstack Resume">
   <link href="favicon.ico"            rel="icon"       type="image/x-icon">
-  <link href="assets/Mona-Sans.woff2" rel="preload"    type="font/woff2" as="font" crossorigin>
+  <link href="assets/Mona-Sans.woff2" rel="preload"    type="font/woff2" as="font" >
   <link href="assets/style.css"       rel="stylesheet" type="text/css">
   <link href="assets/animate.min.css" rel="stylesheet" type="text/css">
   <script src="assets/script.js" async></script>
@@ -18,8 +18,9 @@
   <span class="control"></span>
 </label>
 <div class="container">
-  <a id="contact" href="#" class="eml josh-js" data-josh-anim-name="flip" data-encoded="59352c3a303837363f2c35352a2d383a32193d2c3a32773a3634">
-     <img id="image" src="assets/lucianopereira.webp" alt="Luciano Picture"><span>Hire Me</span>
+  <a id="contact" href="#" class="eml" data-encoded="59352c3a303837363f2c35352a2d383a32193d2c3a32773a3634">
+    <img id="image" src="assets/lucianopereira.webp" alt="Luciano Pereira">
+    <span class="josh-js" data-josh-anim-name="fadeIn" data-josh-duration="1500ms" data-josh-anim-delay=".1s">Hire Me</span>
   </a>
   <h1 class="josh-js" data-josh-anim-name="fadeInUp">Luciano Pereira</h1>
   <h1 class="josh-js" data-josh-anim-name="fadeInUp">Full Stack Developer</h1>
@@ -159,8 +160,23 @@ Creation of a paperless case management system and library for Courts.  Hiring t
 </ul><div class="clear"></div><hr></div>
 <a href="#top" aria-label="go up" alt="go up" id="goup" class="hidden"><svg aria-hidden="true"><use xlink:href="#ico-top"></use></svg></a>
 <footer>
-	<span>Coded with &#128153; </span>
-	Follow me on <a id="linkedin" href="https://www.linkedin.com/in/lucianofullstack">LinkedIn</a>
+  <span>Made with</span>
+  <div class="love"><?xml version="1.0" encoding="iso-8859-1"?>
+    <svg
+      version="1.1"
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      viewBox="0 0 92 72"
+      enable-background="new 0 0 92 72"
+      xml:space="preserve"
+      aria-labelledby="love"
+      role="img"
+    >
+      <title id="heartTitle">love</title>
+      <path d="M82.32,7.888c-8.359-7.671-21.91-7.671-30.271,0l-5.676,5.21l-5.678-5.21c-8.357-7.671-21.91-7.671-30.27,0 c-9.404,8.631-9.404,22.624,0,31.255l35.947,32.991L82.32,39.144C91.724,30.512,91.724,16.52,82.32,7.888z"/>
+    </svg>
+  </div>
+  by <a id="linkedin" href="https://www.linkedin.com/in/lucianofullstack"><span>in/</span>luciano<span>fullstack</span></a>
 </footer>
 <svg id="defs"><defs> 
 <symbol id="ico-top" viewBox=" 0 0 64 64"><path stroke="#f2f8ff" stroke-width="2.25px" d="M2.7,48c-0.8,0-1.3-0.3-1.9-0.8c-1.1-1.1-1.1-2.7,0-3.7l27.7-26.1c1.9-1.9,5.1-1.9,6.9,0l27.7,26.1c1.1,1.1,1.1,2.7,0,3.7 c-1.1,1.1-2.7,1.1-3.7,0L32,21.4L4.5,47.5C4,47.8,3.5,48,2.7,48z"></path></symbol>
