--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Creation of a paperless case management system and library for Courts.  Hiring t
   by <a id="linkedin" href="https://www.linkedin.com/in/lucianofullstack"><span>in/</span>luciano<span>fullstack</span></a>
 </footer>
 <svg id="defs"><defs> 
-<symbol id="ico-top" viewBox=" 0 0 64 64"><path stroke="#f2f8ff" stroke-width="2.25px" d="M2.7,48c-0.8,0-1.3-0.3-1.9-0.8c-1.1-1.1-1.1-2.7,0-3.7l27.7-26.1c1.9-1.9,5.1-1.9,6.9,0l27.7,26.1c1.1,1.1,1.1,2.7,0,3.7 c-1.1,1.1-2.7,1.1-3.7,0L32,21.4L4.5,47.5C4,47.8,3.5,48,2.7,48z"></path></symbol>
+<symbol id="ico-top" viewBox=" 0 0 64 64"><path stroke-width="2.25px" d="M2.7,48c-0.8,0-1.3-0.3-1.9-0.8c-1.1-1.1-1.1-2.7,0-3.7l27.7-26.1c1.9-1.9,5.1-1.9,6.9,0l27.7,26.1c1.1,1.1,1.1,2.7,0,3.7 c-1.1,1.1-2.7,1.1-3.7,0L32,21.4L4.5,47.5C4,47.8,3.5,48,2.7,48z"></path></symbol>
 </defs></svg>
 </body>
 </html>
